# spotifinder

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
spotifinder/: main.py
